anypoint-connector-devkit/v/3.6/anypoint-connector-development.adoc
=  Anypoint连接器开发
:keywords: devkit, connector, development, api, authentication, project

本文档将快速引导您完成制定的决策和启动Anypoint Connector开发项目所需的步骤，使连接器正常工作，并使用所需的功能对其进行增强。

== 先决条件

本文假定您熟悉 link:/anypoint-connector-devkit/v/3.6/[Anypoint连接器DevKit]。

== 连接器开发过程的概述

当您使用DevKit开发连接器时，您的用例将推动一系列关于认证，连接性以及如何调用目标操作的决策，并将数据传递到外部应用程序或其他资源。反过来，这些选择会推动你的发展。如果有选择，本文件提供的信息可帮助您做出决定并提供获取更多详细信息的链接。

== 第1步 - 设置您的开发环境

. 安装 link:http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase7-521261.html[JDK 7]。
. 安装 link:http://maven.apache.org/download.cgi[Maven的]。
. 安装 link:http://www.mulesoft.com/platform/mule-studio[Anypoint Studio]。
. 安装 link:/anypoint-connector-devkit/v/3.6/setting-up-your-dev-environment#installing-the-devkit-plugin-in-studio[Anypoint DevKit插件]。

有关详细说明，请参阅<<Step 1 - Setting Up Your Development Environment>>。

== 第2步 - 设置您的API访问

. 准备连接器的测试环境。基于目标系统的细节差异很大。
.  *SaaS*  - 对于某些SaaS应用程序，沙箱可能是生产帐户中的单独帐户，或者可能在不同的端点进行应答。
.  *On-premise*  - 对于某些内部部署系统或Web服务，您可能只需使用虚拟数据而不是生产数据进行单独的独立安装。 +
. 获取目标系统的任何现有文档，例如API文档。

有关详细说明，请参阅 link:/anypoint-connector-devkit/v/3.6/setting-up-api-access[设置API访问]。

== 第3步 - 创建Anypoint连接器项目

. 按照 link:/anypoint-connector-devkit/v/3.6/creating-an-anypoint-connector-project[创建Anypoint连接器项目]中的流程启动开发环境中的连接器开发项目。
. 为目标系统添加所需的Java库，例如为目标系统提供的客户端库或类库。

完成后，您应该有一个脚手架项目，其中包含一个具有连接器最基本功能的Java类。

== 第4步 - 认证

如果您的API需要验证，请了解您的API使用的验证方法，并选择您的连接器支持的验证方法。根据您的使用情况，从下表中选择一种身份验证方法。有关更多详细信息，请阅读 link:/anypoint-connector-devkit/v/3.6/authentication[认证]，其中介绍了所有支持的方法。

[%header,cols="2*"]
|===
|身份验证方法 |注释
| link:/anypoint-connector-devkit/v/3.6/connection-management[连接管理]  |用于任何非OAuth协议（如SAML，Kerberos，LDAP，NTLM）或用于创建自定义连接的最简单的身份验证模式。
| link:/anypoint-connector-devkit/v/3.6/oauth-v1[OAuth V1]  |在RESTful Web服务和云应用程序中很受欢迎。
| link:/anypoint-connector-devkit/v/3.6/oauth-v2[OAuth V2]  |在RESTful Web服务和云应用程序中很受欢迎。
|===

== 第5步 - 定义属性，操作和数据模型

您为连接器编写的大部分Java代码都涉及到如何在连接器的操作中调用API，以及连接器必须如何在这些操作和Mule之间传递数据。根据您的API，这是连接器之间差异最大的区域。

根据您的API的风格，使用下表选择一种构建连接器的方法：

[%header,cols="2*"]
|===
| API示例 |注释
| link:/anypoint-connector-devkit/v/3.6/creating-a-connector-using-a-java-sdk[Java客户端库]  |如果有官方或知名的第三方库可用，这通常是最简单的连接器风格来实现，并建议使用。大多数客户端库实际上都是SOAP或RESTful API的包装器。
| link:/anypoint-connector-devkit/v/3.6/creating-a-connector-for-a-soap-service-via-cxf-client[SOAP API]  |用于构建和使用SOAP Web服务的事实标准库，此样式处理客户端逻辑和Java对象映射到XML。在Anypoint Studio中，您指示的WSDL会自动构建一个连接器。
| link:/anypoint-connector-devkit/v/3.6/creating-a-connector-for-a-restful-api-using-restcall-annotations[RESTful API]  | Anypoint DevKit为RESTful API提供了一个内置客户端。对干净设计的RESTful API非常有用。
|===

有关更多详细信息，请参阅 link:/anypoint-connector-devkit/v/3.6/defining-attributes-operations-and-data-model[定义属性操作和数据模型]。

== 第6步 - 构建单元和功能测试

生产就绪连接器必须具有一套单元和功能测试;连接器使用标准的JUnit框架。在实践中，在实现连接器的操作时建立你的单元测试。大多数成功的连接器实现都使用测试驱动的方式进行开发。

. 开发一个或多个使用连接器的Mule流。
. 创建一个 link:/anypoint-connector-devkit/v/3.6/connector-testing-framework[FunctionalTestCase]的实例来运行测试。对于DevKit测试，在JUnit测试用例中运行Mule。您构建的每个测试用例都扩展了类 link:/anypoint-connector-devkit/v/3.6/connector-testing-framework[FunctionalTestCase]（JUnit的一个子类）。测试用例管理Mule运行时实例的生命周期，并调用流程来执行测试。
. 以编程方式检查每个测试用例的结果，以确定成功或失败。

在将连接器释放到世界之前，请运行一套完整的测试套件，其中涵盖了所有操作并练习了每个主要代码路径。 Maven生成的项目包含`src/test/java`目录下的一个示例测试用例，以帮助您入门。

有关如何使用JUnit实现连接器测试用例的详细信息，请参阅 link:/anypoint-connector-devkit/v/3.6/developing-devkit-connector-tests[开发DevKit连接器测试]。

== 第7步 - 记录连接器

全功能连接器应该有文档。 DevKit支持创建完整的参考文档，包括代码示例。

* 每次将操作添加到连接器时，DevKit都会在源代码的注释中添加示例XML代码片段。这些片段出现在自动生成的连接器文档中。
* 查看自动生成的文档，以确定是否要扩展它，提供比单个操作的简单文档更多的信息。

有关更多详细信息，请参阅 link:/anypoint-connector-devkit/v/3.6/connector-reference-documentation[连接器参考文档]。

== 第8步 - 打包并释放连接器

当您的连接器准备好向广大用户发布时，请采取以下额外步骤以确保用户成功：

. 在释放连接器之前，请确保您的许可协议已到位。
. 如果您的连接器仅用于内部使用，则可以将其作为Eclipse更新站点共享。
. 要与社区分享您的连接器，请参阅https://www.anypoint.mulesoft.com/exchange/?type=connector&search=communityAnypoint Exchange]。

有关完整的详细信息，请参阅 link:/anypoint-connector-devkit/v/3.6/packaging-your-connector-for-release[打包发布的连接器]。

== 另请参阅

请参阅 link:/anypoint-connector-devkit/v/3.6/setting-up-your-dev-environment[设置你的开发环境]。
